# tally-connector-installer

./: .gitignore  Cargo.toml  README.md  TESTING.md
installer/: lekha_tally_agent.iss
src/: agent.rs  auth.rs  config.rs  main.rs  tally.rs  tls.rs  tray.rs
src/tally/: client.rs  companies.rs  dates.rs  ledgers.rs  sanitize.rs  vouchers.rs
test-page/: README.md  index.html  package.json  server.js
