[package]
name = "lekha_tally_connector"
version = "0.2.0"
edition = "2024"
description = "Local CORS proxy that bridges the Lekha AI web app to Tally Prime on the user's PC."
license = "Proprietary"
authors = ["Lekha AI <ashish@scaleupcfo.in>"]

[[bin]]
# Rename the produced .exe to avoid Windows's "this looks like an installer"
# UAC auto-elevation heuristic (which fires on any exe name containing
# "install"/"setup"/"update"). The package stays `lekha_tally_connector`;
# only the binary it produces is renamed.
name = "lekha_tally"
path = "src/main.rs"

[dependencies]
# --- Tally client ---
# ureq is a tiny blocking HTTP client used to POST to Tally on localhost:9000.
# Blocking is fine inside spawn_blocking; see agent.rs.
ureq = "2"

# --- HTTP server ---
# tokio = async runtime. axum needs it. `full` features = batteries-included.
tokio = { version = "1", features = ["full"] }
# axum = the web framework. Owned by the tokio team, easy to read.
axum = "0.7"
# serde_json = builds JSON responses safely (no string concatenation).
serde_json = "1"

# --- HTTPS + CORS ---
# axum-server adds TLS-serving to axum (axum on its own only does plain HTTP).
axum-server = { version = "0.7", features = ["tls-rustls"] }
# rustls = pure-Rust TLS library; we need it directly to install the crypto
# provider at startup (required since rustls 0.23).
rustls = "0.23"
# rcgen = generates self-signed certs in pure Rust, no openssl needed.
rcgen = "0.13"
# tower-http gives us the CORS middleware (lock browser origins).
tower-http = { version = "0.6", features = ["cors"] }

# --- Pairing token ---
# uuid = generate a random v4 token (cryptographically-secure, 122 bits of
# entropy, familiar format). One paired token per agent install.
uuid = { version = "1", features = ["v4"] }

# --- System tray ---
# tao = the windowing/event-loop library Tauri uses. We need it for the
# Win32 message pump that tray icons require.
tao = "0.30"
# tray-icon = cross-platform tray icon + native popup menu.
tray-icon = "0.19"
